Configured template for Beachball

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Beachball
+author=Beef
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Host a "Don't drop the Beachball!" event for your clan or friends
+tags=clan, event, fun, beachball
+plugins=com.beachball.BeachballPlugin
